More targetted CSS selectors and colour fixes to prevent theme bleed

--- a/css/layout-builder.css
+++ b/css/layout-builder.css
@@ -2,6 +2,11 @@
  * @file
  * Styles for making layout builder look more like Claro.
  */
+.layout-builder {
+  padding: 1.5em 1.5em 0.5em;
+  border: 3px solid #0036b1;
+  background-color: #fff;
+}
 
 .layout-builder__add-section {
   background-color: #fff;
@@ -12,24 +17,24 @@
   margin-bottom: 1.5em;
 }
 
-.layout-builder__link {
-  color: #0036b1;
+#layout-builder .layout-builder__link {
+  color: #0036b1 !important;
   font-family: BlinkMacSystemFont, -apple-system, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   font-weight: bold;
   border-bottom: 0;
   padding: 0.75rem 1.5rem;
 }
 
-.layout-builder__link--add {
+#layout-builder .layout-builder__link--add {
   padding: 0.75rem 2rem;
 }
 
-.layout-builder__link--configure {
+#layout-builder .layout-builder__link--configure {
   padding: 0.375rem 0.75rem;
   font-size: 0.889rem;
 }
 
-.layout-builder__link--remove {
+#layout-builder .layout-builder__link--remove {
   position: relative;
   background: url('/core/misc/icons/bebebe/ex.svg') transparent center center / 16px 16px no-repeat;
   box-sizing: border-box;
@@ -40,13 +45,13 @@
   font-size: 0.889rem;
 }
 
-.layout-builder__link--remove:hover {
+#layout-builder .layout-builder__link--remove:hover {
   background-image: url('/core/misc/icons/787878/ex.svg');
 }
 
-.layout-builder__link:hover,
-.layout-builder__link:active,
-.layout-builder__link:focus {
+#layout-builder .layout-builder__link:hover,
+#layout-builder .layout-builder__link:active,
+#layout-builder .layout-builder__link:focus {
   border-bottom-style: none;
   background-color: #e6ecf8;
 }
@@ -94,11 +99,11 @@
 }
 
 .layout-builder__message--defaults .messages {
-  background-image: url('../../../../misc/icons/73b355/globe.svg');
+  background-image: url('/core/misc/icons/73b355/globe.svg');
 }
 
 .layout-builder__message--overrides .messages {
-  background-image: url('../../../../misc/icons/73b355/location.svg');
+  background-image: url('/core/misc/icons/73b355/location.svg');
 }
 
 /* Ajax spinners */
